--- a/task15/index.html
+++ b/task15/index.html
@@ -44,5 +44,5 @@
 </body>
 
 </html>
-<script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 <script src="js/ife1_15.js" type="text/javascript" charset="utf-8"></script>
